...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" name="YPBlack"/>
                                        <connections>
                                            <outlet property="cellImage" destination="Psh-2m-x1h" id="xm1-aJ-8VK"/>
                                            <outlet property="dateLabel" destination="YYw-ZZ-4a1" id="V0X-OH-cP8"/>
                                            <outlet property="likeButton" destination="O2I-6j-CZ7" id="gN9-UR-aAL"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="tsU-CH-kiK"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="heo-pl-PL7"/>
...
                                <connections>
                                    <outlet property="delegate" destination="l0Q-1Z-9yu" id="h8r-Rg-QdQ"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lfq-6B-283">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="G5S-n0-zEn"/>
                                    <constraint firstAttribute="height" constant="48" id="xIZ-qF-ndj"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                <rect key="frame" x="166.66666666666666" y="430.66666666666669" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="GfM-Yy-a8z"/>
                                    <constraint firstAttribute="width" constant="60" id="pTy-St-lWg"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ty7-Q5-u8q" userLabel="Authenticate">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YPWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="uvw-AQ-Ljz"/>
                                </constraints>
...
                                <color key="backgroundColor" name="YPWhite"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBD-eK-MNV" userLabel="backButton">
                                <rect key="frame" x="9" y="68" width="24" height="24"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button"/>
...
