...
    func logOut() {
        cleanAllService()
        switchToSplashViewController()
    }
    
    func showAlert() -> UIAlertController {
        let alertController = UIAlertController(title: "Выход",
                                                message: "Вы уверены что хотите выйти?",
                                                preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Да", style: .default, handler: { [weak self] action in
            guard let self = self else { return }
            self.logOut()
        }))
...
