...
        
        let descriptionLabel = UILabel()
        descriptionLabel.text = "Hello, world!"
        descriptionLabel.textColor = UIColor.ypWhite
        descriptionLabel.font = UIFont.systemFont(ofSize: 13)
        
        let logoutButton = UIButton.systemButton(with: UIImage(named: "logoutButton")!, target: self, action: #selector(clickLogoutButton(_:)))
        logoutButton.tintColor = UIColor.ypRed
        
        var subviews = [imageView, nameLabel, loginLabel, descriptionLabel, logoutButton]
        
        for subview in subviews {
            subview.translatesAutoresizingMaskIntoConstraints = false
...
